<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background"
    tools:context=".RegisterActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="241dp"
        android:layout_height="189dp"
        android:contentDescription="@string/logoImage"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.104" />

    <TextView
        android:id="@+id/text_view_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="@string/register"
        android:textColor="@color/green"
        android:textColorHint="@color/colorPrimary"
        android:textSize="50dp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:hint="@string/username"
        android:layout_marginBottom="10dp"
        />
    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:hint="@string/password"
        android:password="true"
        android:inputType="textPassword"
        android:layout_marginBottom="10dp"
        />
    <EditText
        android:id="@+id/conf_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:hint="@string/registerCinfirm"
        android:password="true"
        android:inputType="textPassword"
        android:layout_marginBottom="10dp"
        />
    <EditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:hint="@string/email"
        android:layout_marginBottom="10dp"
        />

        <Button
            android:id="@+id/register"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/register"
            android:layout_marginLeft="10dp"
            android:background="@color/green"
            android:textColor="@color/colorPrimary"
            />
    </LinearLayout>
